--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,3 +1,20 @@
 baseURL: https://www.hansterhorst.com
 languageCode: en-us
-title: Website | Hans ter Horst
+title: Hans ter Horst
+theme: shibui
+
+params:
+  author: Hans ter Horst
+  email: hbhorst@mac.com
+
+menu:
+  main:
+    - name: Home
+      url: /
+      weight: 10
+    - name: Posts
+      url: /posts/
+      weight: 20
+    - name: About
+      url: /about/
+      weight: 30
