Update the routes with a wildcard.

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,13 +1,12 @@
 # wrangler.toml
 name = 'hansterhorst'
-compatibility_date = "2025-07-31"
 
 [[routes]]
-pattern = "hansterhorst.com"
+pattern = "hansterhorst.com/*"
 custom_domain = true
 
 [[routes]]
-pattern = "www.hansterhorst.com"
+pattern = "www.hansterhorst.com/*"
 custom_domain = true
 
 [build]
